#CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
# PROJECT(glakkegame)
SET(GLAKKEGAME glakkegame CACHE STRING "GlakkeGame output file name")

IF(UNIX)
	EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_CURRENT_SOURCE_DIR}/content ${CMAKE_BINARY_DIR}/content)
	EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_CURRENT_SOURCE_DIR}/src/LUA ${CMAKE_BINARY_DIR}/glakkegamelua)
	EXECUTE_PROCESS(COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_CURRENT_SOURCE_DIR}/trace.sh ${CMAKE_BINARY_DIR}/trace.sh)
ENDIF()

ADD_SUBDIRECTORY(src)